[package]
name = "github-history"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = { version = "2.11.0", features = ["https"] }
# jzon = { version="0.12.5" } 
aes = { version = "0.8.3" }
cbc = {version = "0.1.2", features = ["alloc", "std"] }
rand = "0.8.5"
anyhow = "1.0.75"
rust-argon2 = "1.0.0"
sha2 = "0.10.7"
serde = { version = "1.0.189", features = ["serde_derive"] }
serde_json = { version = "1.0.107",  features = ["raw_value"] }

