[package]
name = "github-chronicler"
version = "0.2.0"
edition = "2021"

[dependencies]
minreq = { version = "2.11.0", features = ["https"] }
aes = { version = "0.8.3" }
cbc = {version = "0.1.2", features = ["alloc", "std"] }
rand = "0.8.5"
anyhow = "1.0.75"
rust-argon2 = "1.0.0"
sha2 = "0.10.7"
serde = { version = "1.0.189", features = ["serde_derive"] }
serde_json = { version = "1.0.107",  features = ["raw_value"] }
chrono = "0.4.31"

